--- a/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.3_aws_global_infrastructure.ipynb
+++ b/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.3_aws_global_infrastructure.ipynb
@@ -13,11 +13,29 @@
    "metadata": {},
    "source": [
     "## Regions\n",
-    "<center><img src=\"../../images/c1/w1/01.png\"></center>\n",
+    "<center>\n",
+    "  <img \n",
+    "    src=\"../../images/c1/w1/01.png\"\n",
+    "    onerror=\"\n",
+    "      this.onerror = null;\n",
+    "      const repo = 'https://github.com/alirezatheh/aws-fundamentals-notes/blob/main';\n",
+    "      this.src = repo + this.src.split('..')[2];\n",
+    "    \"\n",
+    "  >\n",
+    "</center>\n",
     "\n",
     "Regions are geographic locations worldwide where AWS hosts its data centers. AWS Regions are named after the location where they reside. For example, in the United States, there is a Region in Northern Virginia called the Northern Virginia Region and a Region in Oregon called the Oregon Region. There are Regions in Asia Pacific, Canada, Europe, the Middle East, and South America, and AWS continues to expand to meet the needs of its customers. Each AWS Region is associated with a geographical name and a Region code.\n",
     "\n",
-    "<center><img src=\"../../images/c1/w1/02.png\"></center>\n",
+    "<center>\n",
+    "  <img \n",
+    "    src=\"../../images/c1/w1/02.png\"\n",
+    "    onerror=\"\n",
+    "      this.onerror = null;\n",
+    "      const repo = 'https://github.com/alirezatheh/aws-fundamentals-notes/blob/main';\n",
+    "      this.src = repo + this.src.split('..')[2];\n",
+    "    \"\n",
+    "  >\n",
+    "</center>\n",
     "\n",
     "Here are a few examples of Region codes:\n",
     "- us-east-1: This is the first Region created in the east of the US. The geographical name for this Region is N. Virginia.\n",
@@ -33,13 +51,13 @@
     "## Choose The Right AWS Region\n",
     "Consider four main aspects when deciding which AWS Region to host your applications and workloads: latency, price, service availability, and compliance.\n",
     "\n",
-    "**Latency.** If your application is sensitive to latency, choose a Region that is close to your user base. This helps prevent long wait times for your customers. Synchronous applications such as gaming, telephony, WebSockets, and IoT are significantly affected by higher latency, but even asynchronous workloads, such as ecommerce applications, can suffer from an impact on user connectivity.\n",
+    "**Latency.**\u00a0If your application is sensitive to latency, choose a Region that is close to your user base. This helps prevent long wait times for your customers. Synchronous applications such as gaming, telephony, WebSockets, and IoT are significantly affected by higher latency, but even asynchronous workloads, such as ecommerce applications, can suffer from an impact on user connectivity.\n",
     "\n",
-    "**Price.** Due to the local economy and the physical nature of operating data centers, prices may vary from one Region to another. The pricing in a Region can be impacted by internet connectivity, prices of imported pieces of equipment, customs, real estate, and more. Instead of charging a flat rate worldwide, AWS charges based on the financial factors specific to the location.\n",
+    "**Price.**\u00a0Due to the local economy and the physical nature of operating data centers, prices may vary from one Region to another. The pricing in a Region can be impacted by internet connectivity, prices of imported pieces of equipment, customs, real estate, and more. Instead of charging a flat rate worldwide, AWS charges based on the financial factors specific to the location.\n",
     "\n",
-    "**Service availability.** Some services may not be available in some Regions. The AWS documentation provides a table containing the Regions and the available services within each one.\n",
+    "**Service availability.**\u00a0Some services may not be available in some Regions. The AWS documentation provides a table containing the Regions and the available services within each one.\n",
     "\n",
-    "**Data compliance.** Enterprise companies often need to comply with regulations that require customer data to be stored in a specific geographic territory. If applicable, you should choose a Region that meets your compliance requirements."
+    "**Data compliance.**\u00a0Enterprise companies often need to comply with regulations that require customer data to be stored in a specific geographic territory. If applicable, you should choose a Region that meets your compliance requirements."
    ]
   },
   {
@@ -47,11 +65,20 @@
    "metadata": {},
    "source": [
     "## Availability Zones\n",
-    "<center><img src=\"../../images/c1/w1/03.png\"></center>\n",
+    "<center>\n",
+    "  <img \n",
+    "    src=\"../../images/c1/w1/03.png\"\n",
+    "    onerror=\"\n",
+    "      this.onerror = null;\n",
+    "      const repo = 'https://github.com/alirezatheh/aws-fundamentals-notes/blob/main';\n",
+    "      this.src = repo + this.src.split('..')[2];\n",
+    "    \"\n",
+    "  >\n",
+    "</center>\n",
     "\n",
-    "Inside every Region is a cluster of Availability Zones (AZ). An AZ consists of one or more data centers with redundant power, networking, and connectivity. These data centers operate in discrete facilities with undisclosed locations. They are connected using redundant high-speed and low-latency links. AZs also have a code name. Since they’re located inside Regions, they can be addressed by appending a letter to the end of the Region code name. For example:\n",
+    "Inside every Region is a cluster of Availability Zones (AZ). An AZ consists of one or more data centers with redundant power, networking, and connectivity. These data centers operate in discrete facilities with undisclosed locations. They are connected using redundant high-speed and low-latency links. AZs also have a code name. Since they\u2019re located inside Regions, they can be addressed by appending a letter to the end of the Region code name. For example:\n",
     "- us-east-1a: an AZ in us-east-1 (Northern Virginia Region)\n",
-    "- sa-east-1b: an AZ in sa-east-1 (São Paulo Region in South America)\n",
+    "- sa-east-1b: an AZ in sa-east-1 (S\u00e3o Paulo Region in South America)\n",
     "    \n",
     "If you see that a resource exists in us-east-1c, you know this resource is located in AZ c of the us-east-1 Region."
    ]
@@ -71,7 +98,16 @@
     "## Maintain Resiliency\n",
     "To keep your application available, you need to maintain high availability and resiliency. A well-known best practice for cloud architecture is to use Region-scoped, managed services. These services come with availability and resiliency built in. When that is not possible, make sure the workload is replicated across multiple AZs. At a minimum, you should use two AZs. If one entire AZ fails, your application will have infrastructure up and running in at least a second AZ to take over the traffic.\n",
     "\n",
-    "<center><img src=\"../../images/c1/w1/04.png\"></center>\n"
+    "<center>\n",
+    "  <img \n",
+    "    src=\"../../images/c1/w1/04.png\"\n",
+    "    onerror=\"\n",
+    "      this.onerror = null;\n",
+    "      const repo = 'https://github.com/alirezatheh/aws-fundamentals-notes/blob/main';\n",
+    "      this.src = repo + this.src.split('..')[2];\n",
+    "    \"\n",
+    "  >\n",
+    "</center>\n"
    ]
   },
   {
