--- a/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.5_security_and_the_aws_shared_responsibility_model.ipynb
+++ b/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.5_security_and_the_aws_shared_responsibility_model.ipynb
@@ -7,7 +7,16 @@
     "# Reading 1.5: Security and the AWS Shared Responsibility Model\n",
     "When you begin working with the AWS Cloud, managing security and compliance is a shared responsibility between AWS and you. To depict this shared responsibility, AWS created the shared responsibility model. This distinction of responsibility is commonly referred to as security of the cloud, versus security in the cloud.\n",
     "\n",
-    "<center><img src=\"../../images/c1/w1/06.png\"></center>\n"
+    "<center>\n",
+    "  <img \n",
+    "    src=\"../../images/c1/w1/06.png\"\n",
+    "    onerror=\"\n",
+    "      this.onerror = null;\n",
+    "      const repo = 'https://github.com/alirezatheh/aws-fundamentals-notes/blob/main';\n",
+    "      this.src = repo + this.src.split('..')[2];\n",
+    "    \"\n",
+    "  >\n",
+    "</center>\n"
    ]
   },
   {
