--- a/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.4_interacting_with_aws.ipynb
+++ b/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.4_interacting_with_aws.ipynb
@@ -13,9 +13,18 @@
    "metadata": {},
    "source": [
     "## The AWS Management Console\n",
-    "One way to manage cloud resources is through the web-based console, where you log in and click on the desired service. This can be the easiest way to create and manage resources when you’re first begin working with the cloud. Below is a screenshot that shows the landing page when you first log into the AWS Management Console.\n",
+    "One way to manage cloud resources is through the web-based console, where you log in and click on the desired service. This can be the easiest way to create and manage resources when you\u2019re first begin working with the cloud. Below is a screenshot that shows the landing page when you first log into the AWS Management Console.\n",
     "\n",
-    "<center><img src=\"../../images/c1/w1/05.png\"></center>\n",
+    "<center>\n",
+    "  <img \n",
+    "    src=\"../../images/c1/w1/05.png\"\n",
+    "    onerror=\"\n",
+    "      this.onerror = null;\n",
+    "      const repo = 'https://github.com/alirezatheh/aws-fundamentals-notes/blob/main';\n",
+    "      this.src = repo + this.src.split('..')[2];\n",
+    "    \"\n",
+    "  >\n",
+    "</center>\n",
     "\n",
     "The services are placed in categories, such as compute, database, storage and security, identity and compliance.On the upper right corner is the Region selector. If you click it and change the Region, you will make requests to the services in the chosen Region. The URL changes, too. Changing the Region directs the browser to make requests to a whole different AWS Region, represented by a different subdomain."
    ]
@@ -25,7 +34,7 @@
    "metadata": {},
    "source": [
     "## The AWS Command Line Interface (CLI)\n",
-    "Consider the scenario where you run tens of servers on AWS for your application’s frontend. You want to run a report to collect data from all of these servers. You need to do this programmatically every day because the server details may change. Instead of manually logging into the AWS Management Console and copying/pasting information, you can schedule an AWS Command Line Interface (CLI) script with an API call to pull this data for you.The AWS CLI is a unified tool to manage AWS services. With just one tool to download and configure, you control multiple AWS services from the command line and automate them with scripts. The AWS CLI is open-source, and there are installers available for Windows, Linux, and Mac OS.Here is an example of running an API call against a service using the AWS CLI: \n",
+    "Consider the scenario where you run tens of servers on AWS for your application\u2019s frontend. You want to run a report to collect data from all of these servers. You need to do this programmatically every day because the server details may change. Instead of manually logging into the AWS Management Console and copying/pasting information, you can schedule an AWS Command Line Interface (CLI) script with an API call to pull this data for you.The AWS CLI is a unified tool to manage AWS services. With just one tool to download and configure, you control multiple AWS services from the command line and automate them with scripts. The AWS CLI is open-source, and there are installers available for Windows, Linux, and Mac OS.Here is an example of running an API call against a service using the AWS CLI:\u00a0\n",
     "\n",
     "You get this response:\n",
     "\n",
@@ -47,7 +56,7 @@
    "metadata": {},
    "source": [
     "## AWS Software Development Kits (SDKs)\n",
-    "API calls to AWS can also be performed by executing code with programming languages. You can do this by using AWS Software Development Kits (SDKs). SDKs are open-source and maintained by AWS for the most popular programming languages, such as C++, Go, Java, JavaScript, .NET, Node.js, PHP, Python, and Ruby.Developers commonly use AWS SDKs to integrate their application source code with AWS services. Let’s say the frontend of the application runs in Python and every time it receives a cat photo, it uploads that photo to a storage service. This action can be achieved from within the source code by using the AWS SDK for Python.\n",
+    "API calls to AWS can also be performed by executing code with programming languages. You can do this by using AWS Software Development Kits (SDKs). SDKs are open-source and maintained by AWS for the most popular programming languages, such as C++, Go, Java, JavaScript, .NET, Node.js, PHP, Python, and Ruby.Developers commonly use AWS SDKs to integrate their application source code with AWS services. Let\u2019s say the frontend of the application runs in Python and every time it receives a cat photo, it uploads that photo to a storage service. This action can be achieved from within the source code by using the AWS SDK for Python.\n",
     "\n",
     "Here is an example of code you can implement to work with AWS resources using the Python AWS SDK."
    ]
