Fix spacing errors in week 1

--- a/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.6_protect_the_aws_root_user.ipynb
+++ b/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.6_protect_the_aws_root_user.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What\u2019s the Big Deal About Auth?\n",
-    "When you\u2019re configuring access to any account, two terms come up frequently: **authentication and authorization**. Though these terms may seem basic, you need to understand them to properly configure access management on AWS. It\u2019s important to keep this mind as you progress in this course. Let\u2019s define both terms."
+    "## What’s the Big Deal About Auth?\n",
+    "When you’re configuring access to any account, two terms come up frequently: **authentication and authorization**. Though these terms may seem basic, you need to understand them to properly configure access management on AWS. It’s important to keep this mind as you progress in this course. Let’s define both terms."
    ]
   },
   {
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Understand Authentication\n",
-    "When you create your AWS account, you use a combination of an email address and a password to verify your identity. If the user types in the correct email and password, the system assumes the user is allowed to enter and grants them access. This is the process of *authentication*.Authentication ensures that the user is who they say they are. Usernames and passwords are the most common types of authentication, but you may also work with other forms, such as token-based authentication or biometric data like a fingerprint. Authentication simply answers the question, \u201cAre you who you say you are?\u201d"
+    "When you create your AWS account, you use a combination of an email address and a password to verify your identity. If the user types in the correct email and password, the system assumes the user is allowed to enter and grants them access. This is the process of *authentication*. Authentication ensures that the user is who they say they are. Usernames and passwords are the most common types of authentication, but you may also work with other forms, such as token-based authentication or biometric data like a fingerprint. Authentication simply answers the question, “Are you who you say you are?”"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "## Understand Authorization\n",
-    "Once you\u2019re inside your AWS account, you might be curious about what actions you can take. This is where *authorization* comes in. Authorization is the process of giving users permission to access AWS resources and services. Authorization determines whether the user can perform an action\u2014whether it be to read, edit, delete, or create resources. Authorization answers the question, \u201cWhat actions can you perform?\u201d"
+    "Once you’re inside your AWS account, you might be curious about what actions you can take. This is where *authorization* comes in. Authorization is the process of giving users permission to access AWS resources and services. Authorization determines whether the user can perform an action—whether it be to read, edit, delete, or create resources. Authorization answers the question, “What actions can you perform?”"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "## Delete Your Keys to Stay Safe\n",
     "If you don't already have an access key for your AWS account root user, don't create one unless you absolutely need to. If you do have an access key for your AWS account root user and want to delete the keys:\n",
     "\n",
-    "1. Go to the [My Security Credentials page](https://console.aws.amazon.com/iam/home?#security_credential) in the AWS Management Console and sign in with the root user\u2019s email address and password.\n",
+    "1. Go to the [My Security Credentials page](https://console.aws.amazon.com/iam/home?#security_credential) in the AWS Management Console and sign in with the root user’s email address and password.\n",
     "2. Open the Access keys section.\n",
     "3. Under Actions, click **Delete**.\n",
     "4. Click **Yes**."
@@ -83,11 +83,11 @@
    "metadata": {},
    "source": [
     "## The Case for Multi-Factor Authentication\n",
-    "When you create an AWS account and first log in to that account, you use single-factor authentication. Single-factor authentication is the simplest and most common form of authentication. It only requires one authentication method. In this case, you use a username and password to authenticate as the AWS root user. Other forms of single-factor authentication include a security pin or a security token.However, sometimes a user\u2019s password is easy to guess.\n",
+    "When you create an AWS account and first log in to that account, you use single-factor authentication. Single-factor authentication is the simplest and most common form of authentication. It only requires one authentication method. In this case, you use a username and password to authenticate as the AWS root user. Other forms of single-factor authentication include a security pin or a security token. However, sometimes a user’s password is easy to guess.\n",
     "\n",
-    "For example, your coworker Bob\u2019s password, IloveCats222, might be easy for someone who knows Bob personally to guess, because it\u2019s a combination of information that is easy to remember and describes certain things about Bob (1. Bob loves cats, and 2. Bob\u2019s birthday is February 22).\n",
+    "For example, your coworker Bob’s password, IloveCats222, might be easy for someone who knows Bob personally to guess, because it’s a combination of information that is easy to remember and describes certain things about Bob (1. Bob loves cats, and 2. Bob’s birthday is February 22).\n",
     "\n",
-    "If a bad actor guessed or cracked Bob\u2019s password through social engineering, bots, or scripts, Bob might lose control of his account. Unfortunately, this is a common scenario that users of any website often face.\n",
+    "If a bad actor guessed or cracked Bob’s password through social engineering, bots, or scripts, Bob might lose control of his account. Unfortunately, this is a common scenario that users of any website often face.\n",
     "\n",
     "This is why using MFA has become so important in preventing unwanted account access. MFA requires two or more authentication methods to verify an identity, pulling from three different categories of information.\n",
     "\n",
@@ -95,7 +95,7 @@
     "- Something you have, such as a one-time passcode from a hardware device or mobile app\n",
     "- Something you are, such as fingerprint or face scanning technology\n",
     "    \n",
-    "Using a combination of this information enables systems to provide a layered approach to account access. Even though the first method of authentication, Bob\u2019s password, was cracked by a malicious user, it\u2019s very unlikely that a second method of authentication, such as a fingerprint, would also be cracked. This extra layer of security is needed when protecting your most sacred accounts, which is why it\u2019s important to enable MFA on your AWS root user."
+    "Using a combination of this information enables systems to provide a layered approach to account access. Even though the first method of authentication, Bob’s password, was cracked by a malicious user, it’s very unlikely that a second method of authentication, such as a fingerprint, would also be cracked. This extra layer of security is needed when protecting your most sacred accounts, which is why it’s important to enable MFA on your AWS root user."
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "source": [
     "## Use MFA on AWS\n",
-    "If you enable MFA on your root user, you are required to present a piece of identifying information from both the something you know category and the something you have category. The first piece of identifying information the user enters is an email and password combination. The second piece of information is a temporary numeric code provided by an MFA device.Enabling MFA adds an additional layer of security because it requires users to use a supported MFA mechanism in addition to their regular sign-in credentials. It\u2019s best practice to enable MFA on the root user."
+    "If you enable MFA on your root user, you are required to present a piece of identifying information from both the something you know category and the something you have category. The first piece of identifying information the user enters is an email and password combination. The second piece of information is a temporary numeric code provided by an MFA device. Enabling MFA adds an additional layer of security because it requires users to use a supported MFA mechanism in addition to their regular sign-in credentials. It’s best practice to enable MFA on the root user."
    ]
   },
   {
