--- a/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.7_introduction_to_aws_identity_and_access_management.ipynb
+++ b/c1_aws_cloud_technical_essentials/w1_aws_overview_and_security/1.7_introduction_to_aws_identity_and_access_management.ipynb
@@ -22,10 +22,10 @@
     "## Get To Know The IAM Features\n",
     "To help control access and manage identities within your AWS account, IAM offers many features to ensure security.\n",
     "- IAM is global and not specific to any one Region. This means you can see and use your IAM configurations from any Region in the AWS Management Console.\n",
-    "- IAM is integrated with many AWS services\u00a0[by default](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_aws-services-that-work-with-iam.html).    \n",
+    "- IAM is integrated with many AWS services [by default](https://docs.aws.amazon.com/IAM/latest/UserGuide/reference_aws-services-that-work-with-iam.html).    \n",
     "- You can establish password policies in IAM to specify complexity requirements and mandatory rotation periods for users.\n",
-    "- IAM supports\u00a0MFA.\n",
-    "- IAM supports identity federation, which allows users who already have passwords elsewhere\u2014for example, in your corporate network or with an internet identity provider\u2014to get temporary access to your AWS account.  \n",
+    "- IAM supports MFA.\n",
+    "- IAM supports identity federation, which allows users who already have passwords elsewhere—for example, in your corporate network or with an internet identity provider—to get temporary access to your AWS account.  \n",
     "- Any AWS customer can use IAM; the service is offered at no additional charge."
    ]
   },
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "## What Is An IAM User?\n",
-    "An IAM user represents a person or service that interacts with AWS. You define the user within your AWS account. And any activity done by that user is billed to your account. Once you create a user, that user can sign in to gain access to the AWS resources inside your account.You can also add more users to your account as needed. For example, for your cat photo application, you could create individual users in your AWS account that correspond to the people who are working on your application. Each person should have their own login credentials. Providing users with their own login credentials prevents sharing of credentials."
+    "An IAM user represents a person or service that interacts with AWS. You define the user within your AWS account. And any activity done by that user is billed to your account. Once you create a user, that user can sign in to gain access to the AWS resources inside your account. You can also add more users to your account as needed. For example, for your cat photo application, you could create individual users in your AWS account that correspond to the people who are working on your application. Each person should have their own login credentials. Providing users with their own login credentials prevents sharing of credentials."
    ]
   },
   {
@@ -46,7 +46,7 @@
     "- Access to the AWS Management Console\n",
     "- Programmatic access to the AWS Command Line Interface (AWS CLI) and AWS Application Programming Interface (AWS API)\n",
     "\n",
-    "To access the AWS Management Console, provide the users with a user name and password. For programmatic access, AWS generates a set of access keys that can be used with the AWS CLI and AWS API. IAM user credentials are considered permanent, in that they stay with the user until there\u2019s a forced rotation by admins.When you create an IAM user, you have the option to grant permissions directly at the user level.This can seem like a good idea if you have only one or a few users. However, as the number of users helping you build your solutions on AWS increases, it becomes more complicated to keep up with permissions. For example, if you have 3,000 users in your AWS account, administering access becomes challenging, and it\u2019s impossible to get a top-level view of who can perform what actions on which resources.If only there were a way to group IAM users and attach permissions at the group level instead. Guess what: There is!"
+    "To access the AWS Management Console, provide the users with a user name and password. For programmatic access, AWS generates a set of access keys that can be used with the AWS CLI and AWS API. IAM user credentials are considered permanent, in that they stay with the user until there’s a forced rotation by admins. When you create an IAM user, you have the option to grant permissions directly at the user level. This can seem like a good idea if you have only one or a few users. However, as the number of users helping you build your solutions on AWS increases, it becomes more complicated to keep up with permissions. For example, if you have 3,000 users in your AWS account, administering access becomes challenging, and it’s impossible to get a top-level view of who can perform what actions on which resources. If only there were a way to group IAM users and attach permissions at the group level instead. Guess what: There is!"
    ]
   },
   {
@@ -54,17 +54,17 @@
    "metadata": {},
    "source": [
     "## What Is An IAM Group?\n",
-    "An IAM group is a collection of users. All users in the group inherit the permissions assigned to the group. This makes it easy to give permissions to multiple users at once. It\u2019s a more convenient and scalable way of managing permissions for users in your AWS account. This is why using IAM groups is a best practice.If you have a an application that you\u2019re trying to build and have multiple users in one account working on the application, you might decide to organize these users by job function. You might want IAM groups organized by developers, security, and admins. You would then place all of your IAM users in the respective group for their job function.This provides a better view to see who has what permissions within your organization and an easier way to scale as new people join, leave, and change roles in your organization.Consider the following examples.\n",
+    "An IAM group is a collection of users. All users in the group inherit the permissions assigned to the group. This makes it easy to give permissions to multiple users at once. It’s a more convenient and scalable way of managing permissions for users in your AWS account. This is why using IAM groups is a best practice. If you have a an application that you’re trying to build and have multiple users in one account working on the application, you might decide to organize these users by job function. You might want IAM groups organized by developers, security, and admins. You would then place all of your IAM users in the respective group for their job function. This provides a better view to see who has what permissions within your organization and an easier way to scale as new people join, leave, and change roles in your organization. Consider the following examples.\n",
     "\n",
     "- A new developer joins your AWS account to help with your application. You simply create a new user and add them to the developer group, without having to think about which permissions they need.\n",
-    "- A developer changes jobs and becomes a security engineer. Instead of editing the user\u2019s permissions directly, you can instead remove them from the old group and add them to the new group that already has the correct level of access.\n",
+    "- A developer changes jobs and becomes a security engineer. Instead of editing the user’s permissions directly, you can instead remove them from the old group and add them to the new group that already has the correct level of access.\n",
     "    \n",
     "Keep in mind the following features of groups.\n",
     "- Groups can have many users.\n",
     "- Users can belong to many groups.\n",
     "- Groups cannot belong to groups.\n",
     "\n",
-    "The root user can perform all actions on all resources inside an AWS account by default. This is in contrast to creating new IAM users, new groups, or new roles. New IAM identities can perform no actions inside your AWS account by default until you explicitly grant them permission.The way you grant permissions in IAM is by using IAM policies."
+    "The root user can perform all actions on all resources inside an AWS account by default. This is in contrast to creating new IAM users, new groups, or new roles. New IAM identities can perform no actions inside your AWS account by default until you explicitly grant them permission. The way you grant permissions in IAM is by using IAM policies."
    ]
   },
   {
@@ -94,14 +94,14 @@
     "```\n",
     "\n",
     "In this policy, there are four major JSON elements: Version, Effect, Action, and Resource.\n",
-    "- The\u00a0**Version**\u00a0element defines the version of the policy language. It specifies the language syntax rules that are needed by AWS to process a policy. To use all the available policy features, include\u00a0\"Version\": \"2012-10-17\"\u00a0before the\u00a0\"Statement\"\u00a0element in all your policies.\n",
-    "- The\u00a0**Effect**\u00a0element specifies whether the statement will allow or deny access. In this policy, the Effect is\u00a0\"Allow\", which means you\u2019re providing access to a particular resource.\n",
-    "- The\u00a0**Action**\u00a0element describes the type of action that should be allowed or denied. In the above policy, the action is\u00a0\"\\*\". This is called a wildcard, and it is used to symbolize every action inside your AWS account.\n",
-    "- The\u00a0**Resource**\u00a0element specifies the object or objects that the policy statement covers. In the policy example above, the resource is also the wildcard\u00a0\"\\*\". This represents all resources inside your AWS console.  \n",
+    "- The **Version** element defines the version of the policy language. It specifies the language syntax rules that are needed by AWS to process a policy. To use all the available policy features, include \"Version\": \"2012-10-17\" before the \"Statement\" element in all your policies.\n",
+    "- The **Effect** element specifies whether the statement will allow or deny access. In this policy, the Effect is \"Allow\", which means you’re providing access to a particular resource.\n",
+    "- The **Action** element describes the type of action that should be allowed or denied. In the above policy, the action is \"\\*\". This is called a wildcard, and it is used to symbolize every action inside your AWS account.\n",
+    "- The **Resource** element specifies the object or objects that the policy statement covers. In the policy example above, the resource is also the wildcard \"\\*\". This represents all resources inside your AWS console.  \n",
     "\n",
-    "Putting all this information together, you have a policy that\u00a0**allows**\u00a0you to perform\u00a0**all actions**\u00a0on\u00a0**all resources**\u00a0inside your AWS account. This is what we refer to as an\u00a0*administrator policy*.\n",
+    "Putting all this information together, you have a policy that **allows** you to perform **all actions** on **all resources** inside your AWS account. This is what we refer to as an *administrator policy*.\n",
     "\n",
-    "Let\u2019s look at another example of a more granular IAM policy.\n",
+    "Let’s look at another example of a more granular IAM policy.\n",
     "\n",
     "```json\n",
     "{\n",
@@ -119,7 +119,7 @@
     "}\n",
     "```\n",
     "\n",
-    "After looking at the JSON, you can see that this policy\u00a0**allows**\u00a0the IAM user to\u00a0**change their own IAM password**\u00a0(iam:ChangePassword) and\u00a0**get information about their own user**\u00a0(iam:GetUser). It only permits them to access their own credentials because the resource restricts access with the variable substitution\u00a0${aws:username}."
+    "After looking at the JSON, you can see that this policy **allows** the IAM user to **change their own IAM password** (iam:ChangePassword) and **get information about their own user** (iam:GetUser). It only permits them to access their own credentials because the resource restricts access with the variable substitution ${aws:username}."
    ]
   },
   {
@@ -132,9 +132,9 @@
     "\n",
     "| Element  | Description                                                             | Required | Example                                                        |\n",
     "|----------|-------------------------------------------------------------------------|----------|----------------------------------------------------------------|\n",
-    "| Effect   | Specifies whether the statement results in an allow or an explicit deny | \u2714        | \"Effect\": \"Deny\"                                               |\n",
-    "| Action   | Describes the specific actions that will be allowed or denied           | \u2714        | \"Action\": \"iam:CreateUser\"                                     |\n",
-    "| Resource | Specifies the object or objects that the statement covers               | \u2714        | \"Resource\": \"arn:aws:iam::account-ID-without-hyphens:user/Bob\" |"
+    "| Effect   | Specifies whether the statement results in an allow or an explicit deny | ✔        | \"Effect\": \"Deny\"                                               |\n",
+    "| Action   | Describes the specific actions that will be allowed or denied           | ✔        | \"Action\": \"iam:CreateUser\"                                     |\n",
+    "| Resource | Specifies the object or objects that the statement covers               | ✔        | \"Resource\": \"arn:aws:iam::account-ID-without-hyphens:user/Bob\" |"
    ]
   },
   {
